[gd_scene load_steps=11 format=3 uid="uid://b8aqwrc73frb2"]

[ext_resource type="Script" path="res://main/scripts/Laser.gd" id="1_x3gry"]
[ext_resource type="Script" path="res://main/scripts/AreaAttackComponent.gd" id="3_1tuwr"]
[ext_resource type="Texture2D" uid="uid://dg18hsc7cs1ee" path="res://assets/laser/tiro-laser-foda1.png" id="4_x2a10"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i6gdm"]
radius = 1.41421

[sub_resource type="CircleShape2D" id="CircleShape2D_5hqpi"]
radius = 71.3442

[sub_resource type="CircleShape2D" id="CircleShape2D_idfhb"]
radius = 9.21954

[sub_resource type="Animation" id="Animation_6f0pl"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_x2a10")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AreaAttackComponent/Area:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}

[sub_resource type="Animation" id="Animation_wl5vs"]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_x2a10")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(0.965936, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(2, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 2.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AreaAttackComponent/Area:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.4, 0.4), Vector2(0.6, 0.6), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_y0y75"]
resource_name = "shoot"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_x2a10")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(0.965936, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eibs1"]
_data = {
"RESET": SubResource("Animation_6f0pl"),
"explode": SubResource("Animation_wl5vs"),
"shoot": SubResource("Animation_y0y75")
}

[node name="Laser" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 32
script = ExtResource("1_x3gry")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("4_x2a10")
hframes = 2
vframes = 4

[node name="tracer" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_i6gdm")
disabled = true

[node name="Detonator" type="Timer" parent="."]
wait_time = 1.2

[node name="AreaAttackComponent" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32
script = ExtResource("3_1tuwr")
DAMAGE_SELF = 10.0
DAMAGE = 60.0
KNOCK_BACK_FORCE = 100.0

[node name="Area" type="CollisionShape2D" parent="AreaAttackComponent"]
scale = Vector2(0.1, 0.1)
shape = SubResource("CircleShape2D_5hqpi")

[node name="Collision" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="Body" type="CollisionShape2D" parent="Collision"]
shape = SubResource("CircleShape2D_idfhb")
debug_color = Color(0.94902, 0.172549, 0.392157, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eibs1")
}

[connection signal="timeout" from="Detonator" to="." method="_on_detonator_timeout"]
[connection signal="area_entered" from="AreaAttackComponent" to="AreaAttackComponent" method="_on_area_entered"]
[connection signal="area_entered" from="Collision" to="." method="_on_collision_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
